--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
 
       <div class="settings-menu">
-        <div id="dark-btn" class="dark-btn-on">
+        <div id="dark-btn">
           <span></span>
         </div>
 
